k8s/event-manager-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-manager-deployment
  labels:
    app: event-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-manager
  template:
    metadata:
      labels:
        app: event-manager
    spec:
      containers:
      - name: event-manager
        image: ddosl/sorokin-app-event-manager:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
