k8s/profile-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service-deployment
  labels:
    app: profile-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service
  template:
    metadata:
      labels:
        app: profile-service
    spec:
      containers:
        - name: profile-service
          image: ddosl/sorokin-app-profile-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
