k8s/event-manager-service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-manager-service
spec:
  type: ClusterIP
  selector:
    app: event-manager
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
