k8s/event-notificator-service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-notificator-service
spec:
  type: ClusterIP
  selector:
    app: event-notificator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
