k8s/profile-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  type: ClusterIP
  selector:
    app: profile-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
