k8s/strimzi-kafka-cluster.yml

# 3. Сервис-алиас (все еще нужен, чтобы приложения нашли Kafka)
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  type: ExternalName
  externalName: kafka-kafka-bootstrap.default.svc.cluster.local
  ports:
  - port: 9092
